done adding button

--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
     <h1>My First ever website</h1>
     <h3>Look Man I can push to git hub</h3>
     <p>He is doing great</p>
+    <input type="text">
+    <br>
+    <button> Click me Babe!!</button>
 </body>
 </html>
