--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <h1>My First ever website</h1>
-    <h3>Look Man I can push to git hub</h3>
-    <p>He is doing great</p>
+    <p>Feeling Happy</p>
+    <p>I am a ghost</p>
+    <p>I am a nil pori lal jin</p>
     <input type="text">
     <br>
     <button> Click me Babe!!</button>
